<resources>
    <string name="app_name">malbum</string>
    <string name="action_settings">Settings</string>
    <string name="login_help_text">Welcome to malbum. To begin, enter the hostname of a malbum server,
    your username and a password.</string>
    <string name="login_server_hostname">Hostname</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="loading">Loading...</string>
    <string name="single_user_album">Single-User Album</string>
    <string name="new_comment">Add new comment</string>
    <string name="post_comment">Publish comment</string>
    <string name="comments">Comments:</string>
    <string name="comment_posted">Comment successfully posted!</string>
    <string name="comment_failure">There was a problem posting the new comment.</string>
    <string name="upload_instructions_1">Tap the icon below to take a new picture.</string>
    <string name="upload">Upload Image!</string>
    <string name="custom_photo_name">Name Your Photo</string>
    <string name="photo_description">Photo Description</string>
    <string name="upload_success">Photo upload was successful!</string>
    <string name="upload_failure">Photo upload failed :(</string>
    <string name="logout">Logout</string>
</resources>
