<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/upload_instructions_1"
            android:id="@+id/upload_instructions"
            android:layout_gravity="center_horizontal" />

        <ImageButton
            android:layout_width="300dp"
            android:layout_height="500dp"
            android:id="@+id/upload_image"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:src="@android:drawable/ic_menu_camera"
            android:layout_gravity="center_horizontal"
            android:maxWidth="400dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/upload_custom_name"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/custom_photo_name" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/upload_comment"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/photo_description" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:id="@+id/upload_button"
            android:layout_gravity="center_horizontal"
            android:enabled="false" />

    </LinearLayout>
</ScrollView>